added Swedish “AIK:are” example to TR29

--- a/tr29/tr29.html
+++ b/tr29/tr29.html
@@ -46,7 +46,7 @@
 			</tr>
 			<tr>
 				<td valign="top">Date</td>
-				<td valign="top" class="changed">2020-05-19</td>
+				<td valign="top" class="changed">2020-11-09</td>
 			</tr>
 			<tr>
 				<td valign="top">This Version</td>
@@ -2017,7 +2017,7 @@
 				</p>
 			</li>
 			<li>
-				<p>Certain cases such as colons in words (c:a) are included in
+				<p>Certain cases such as colons in words <span class='changed'>(e.g. “c:a” and “AIK:are”)</span> are included in
 					the default even though they may be specific to relatively small
 					user communities (Swedish) because they do not occur otherwise, in
 					normal text, and so do not cause a problem for other languages.</p>
@@ -2152,7 +2152,7 @@
 			<li>It includes characters that may not be appropriate for
 				identifiers, and some that would not be parts of words. It also
 				permits some characters that may be part of words in a broad sense,
-				but not part of names, such as in “c:a” in Swedish, or hyphenation
+				but not part of names, such as in “c:a” <span class="changed">and “AIK:are” </span>in Swedish, or hyphenation
 				points used in dictionary words.</li>
 			<li>Additional tests may be needed in cases where security is at
 				issue. In particular, names may be validated by transforming them to
@@ -3217,6 +3217,16 @@
 			<h3>Revision 38</h3>
 			<ul>
 				<li><strong>Proposed Update</strong> for Unicode 14.0.0.</li>
+				<li><strong>Section 4.1.1 <a href="#Word_Boundary_Rules">Word Boundary Rules</a></strong>
+					<ul>
+						<li>Added Swedish “AIK:are” example.</li>
+					</ul>
+				</li>
+				<li><strong>Section 4.2 <a href="#Name_Validation">Name Validation</a></strong>
+					<ul>
+						<li>Added Swedish “AIK:are” example.</li>
+					</ul>
+				</li>
 				<li><strong>Section 6.2 <a href="#Grapheme_Cluster_and_Format_Rules">Replacing Ignore Rules</a></strong>
 					<ul>
 						<li>Modified the first paragraph as recommended in <a href="https://www.unicode.org/L2/L2020/20108r-properties-feedback.pdf">L2/20-108.</a></li>
