minor changes to TR29 based on Editorial Committee feedback

--- a/tr29/tr29.html
+++ b/tr29/tr29.html
@@ -37,7 +37,7 @@
 		<table class="simple" width="90%">
 			<tr>
 				<td valign="top" width="20%">Version</td>
-				<td valign="top" class="changed">Unicode 14.0.0</td>
+				<td valign="top" class="changed">Unicode 14.0.0 (Draft 3)</td>
 			</tr>
 			<tr>
 				<td valign="top">Editors</td>
@@ -46,7 +46,7 @@
 			</tr>
 			<tr>
 				<td valign="top">Date</td>
-				<td valign="top" class="changed">2020-11-09</td>
+				<td valign="top" class="changed">2020-11-12</td>
 			</tr>
 			<tr>
 				<td valign="top">This Version</td>
@@ -2017,7 +2017,7 @@
 				</p>
 			</li>
 			<li>
-				<p>Certain cases such as colons in words <span class='changed'>(e.g. “c:a” and “AIK:are”)</span> are included in
+				<p>Certain cases such as colons in words <span class='changed'>(for example, “AIK:are” and “c:a”)</span> are included in
 					the default even though they may be specific to relatively small
 					user communities (Swedish) because they do not occur otherwise, in
 					normal text, and so do not cause a problem for other languages.</p>
@@ -2152,7 +2152,7 @@
 			<li>It includes characters that may not be appropriate for
 				identifiers, and some that would not be parts of words. It also
 				permits some characters that may be part of words in a broad sense,
-				but not part of names, such as in “c:a” <span class="changed">and “AIK:are” </span>in Swedish, or hyphenation
+				but not part of names, such as in <span class="changed">“AIK:are” and </span>“c:a” in Swedish, or hyphenation
 				points used in dictionary words.</li>
 			<li>Additional tests may be needed in cases where security is at
 				issue. In particular, names may be validated by transforming them to
